2009-11-13  Andras Becsi  <becsi.andras@stud.u-szeged.hu>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Enable Page Cache if setMaximumPagesInCache needs it.
        This fixes https://bugs.webkit.org/show_bug.cgi?id=31266.

        * Api/qwebsettings.cpp:
        (QWebSettingsPrivate::apply):
        (QWebSettings::setMaximumPagesInCache):
2009-11-13  Andras Becsi  <becsi.andras@stud.u-szeged.hu>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Add WebKitUsesPageCachePreferenceKey overriding support to DRT's LayoutTestController.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::WebPage::resetSettings):
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::overridePreference):

Canonical link: https://commits.webkit.org/42367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50938 268f45cc-cd09-0410-ab3c-d52691b4dbfc