WebKitTools/DumpRenderTree/qt/LayoutTestControllerQt.cpp
@@ -326,4 +326,6 @@ void LayoutTestController::overridePreference(const QString& name, const QVarian
         settings->setAttribute(QWebSettings::OfflineWebApplicationCacheEnabled, value.toBool());
     else if (name == "WebKitDefaultFontSize")
         settings->setFontSize(QWebSettings::DefaultFontSize, value.toInt());
+    else if (name == "WebKitUsesPageCachePreferenceKey")
+        QWebSettings::setMaximumPagesInCache(value.toInt());
 }
